Fix layout bug

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,4 +29,5 @@
   display: flex;
   height: 60px;
   justify-content: center;
+  width: 100%;
 }
